# Rasterizer

./: .gitignore  CMakeLists.txt  README.md  main.cc  presentation_isim.pptx
assets/: well.mtl
include/: camera.h  logger.h  matrix.h  mesh.h  rasterizer.h  shader.h  texture.h  vector.h
include/motor/: motor.hh
src/: camera.cpp  logger.cpp  main.cpp  mesh.cpp  rasterizer.cpp  shader.cpp  texture.cpp
src/geometry/: CMakeLists.txt
src/image/: CMakeLists.txt
src/light/: CMakeLists.txt
src/logger/: CMakeLists.txt
src/motor/: CMakeLists.txt  motor.cc
src/object/: CMakeLists.txt  cube.cc  plane.cc
src/scene/: CMakeLists.txt
src/texture/: CMakeLists.txt
